# pyvisdmc

./: .gitignore  README.md  components.md  config.yml  environment.yml  pyproject.toml  user_stories.md
.github/workflows/: python-package-conda.yml
data/h2o_example_data/1.0w_5000_walkers_20000t_1dt/: H2O_0_training_10000ts.hdf5  H2O_0_training_11000ts.hdf5  H2O_0_training_15000ts.hdf5  H2O_0_training_16000ts.hdf5  H2O_0_training_19000ts.hdf5  H2O_0_training_4000ts.hdf5  H2O_0_training_5000ts.hdf5  H2O_0_training_9000ts.hdf5  H2O_1_sim_info.hdf5  H2O_1_training_0ts.hdf5  H2O_1_training_10000ts.hdf5  H2O_1_training_1000ts.hdf5  H2O_1_training_11000ts.hdf5  H2O_1_training_12000ts.hdf5  H2O_1_training_13000ts.hdf5  H2O_1_training_14000ts.hdf5  H2O_1_training_15000ts.hdf5  H2O_1_training_16000ts.hdf5  H2O_1_training_17000ts.hdf5  H2O_1_training_18000ts.hdf5  H2O_1_training_19000ts.hdf5  H2O_1_training_2000ts.hdf5  H2O_1_training_3000ts.hdf5  (+27 more)
doc/: components.md  final_project_slides.pptx  user_stories.md
examples/: example_altair_vis.ipynb  proto_function.ipynb  pyvibdmc_plotting_example_with_altair.ipynb  pyvibdmc_plotting_examples.ipynb  pyvibdmc_plotting_examples_with_seaborn.ipynb
h5o3_example_data/1.0w_50000_walkers_50000t_1dt/: H5O3_0_sim_info.hdf5
pyvisdmc/: main.py
pyvisdmc/plots/: eref.py
src/pyvisdmc/: __init__.py  main.py  plotting_functions.py
technology_review/: example_altair_vis.ipynb
tests/: __init__.py  test_data_loader.py  test_main.py  test_mult_dist.py  test_one_dist.py  test_plot_eref.py  test_plots.py  test_two_d_dist.py
(+279 files in other folders)
